Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -171,8 +171,6 @@
         "model_url = model_dict.get(model_name)\n",
         "\n",
         "def install(model_url):\n",
-        "    if model_url is None:\n",
-        "        return\n",
         "    base_name = os.path.basename(model_url)\n",
         "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
         "\n",
@@ -185,7 +183,7 @@
       "cell_type": "code",
       "source": [
         "#@title 3.VAE\n",
-        "vae_name = \"orangemix.vae.pt\" #@param [\"None\",\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"vae-ft-mse-840000-ema-pruned\" #@param [\"\",\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -200,8 +198,6 @@
         "vae_url = url_dict.get(vae_name)\n",
         "\n",
         "def install(vae_url):\n",
-        "    if vae_url is None:\n",
-        "        return\n",
         "    base_name = os.path.basename(vae_url)\n",
         "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
         "\n",
