Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -66,7 +66,7 @@
         "  !git clone https://github.com/hnmr293/sd-webui-llul /content/stable-diffusion-webui/extensions/sd-webui-llul\n",
         "  !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git /content/stable-diffusion-webui/extensions/Stable-Diffusion-Webui-Civitai-Helper\n",
         "  !git clone https://github.com/hnmr293/sd-webui-cutoff /content/stable-diffusion-webui/extensions/sd-webui-cutoff\n",
-        "\n",
+        "  !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "%cd /content/stable-diffusion-webui\n",
         "!git reset --hard\n",
         "\n",
@@ -101,7 +101,14 @@
         "  !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/t2iadapter_canny_sd14v1.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o t2iadapter_canny_sd14v1.pth\n",
         "\n",
         "#EasyNegative\n",
-        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n"
+        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
+        "\n",
+        "mount_drive = False # @param {type: \"boolean\"}\n",
+        "\n",
+        "if mount_drive:\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")"
       ]
     },
     {
@@ -214,7 +221,8 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデル(任意)\n",
-        "model_type =\"Checkpoint\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
+        "\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
@@ -225,23 +233,46 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "  \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
-        "def install(url):\n",
-        "    base_name = os.path.basename(url)\n",
+        "#@markdown ▼driveをマウントした場合、ファイルパスを入力してください。\n",
+        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/output/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
-        "    if url.startswith(\"https://drive.google.com\"):\n",
-        "        os.chdir(pretrained_model)\n",
-        "        !gdown --fuzzy {url}\n",
-        "    elif url.startswith(\"https://huggingface.co/\"):\n",
-        "        if \"/blob/\" in url:\n",
-        "            url = url.replace(\"/blob/\", \"/resolve/\")\n",
-        "                #@markdown ▼プライベートモデルを使用する場合、huggingfaceのアクセストークンを入力してください。\n",
-        "        huggingface_token = \"\"  # @param {type:\"string\"}\n",
-        "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "if drivePath:\n",
+        "  if \"例:\" not in drivePath:\n",
+        "    if not os.path.exists(drivePath):\n",
+        "      drivePath = \"/content/drive/MyDrive/\" + drivePath\n",
+        "    if not os.path.exists(drivePath):\n",
+        "      print(\"drivePathが存在しません。コピーをスキップします。\")\n",
         "    else:\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "      from google.colab import drive\n",
+        "      if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")\n",
+        "      !cp {drivePath} {pretrained_model}\n",
+        "      print(\"コピーされました\")\n",
+        "  else:\n",
+        "    print(\"drivePathのコピーをスキップします。\")\n",
+        "else:\n",
+        "  print(\"drivePathが存在しません。コピーをスキップします。\")\n",
         "\n",
-        "install(modelUrl)"
+        "if modelUrl == \"\":\n",
+        "  print(\"\")\n",
+        "else:\n",
+        "  def install(url):\n",
+        "      base_name = os.path.basename(url)\n",
+        "\n",
+        "      if url.startswith(\"https://drive.google.com\"):\n",
+        "          os.chdir(pretrained_model)\n",
+        "          !gdown --fuzzy {url}\n",
+        "      elif url.startswith(\"https://huggingface.co/\"):\n",
+        "          if \"/blob/\" in url:\n",
+        "              url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "                  #@markdown ▼Hugging Faceのプライベートモデルを使用する場合、[アクセストークン](https://huggingface.co/settings/tokens)を入力してください。\n",
+        "          huggingface_token = \"\"  # @param {type:\"string\"}\n",
+        "          user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "          !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "      else:\n",
+        "          !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "\n",
+        "  install(modelUrl)\n"
       ],
       "metadata": {
         "cellView": "form",
