Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -179,7 +179,7 @@
         "\n",
         "def install(model_url):\n",
         "    base_name = os.path.basename(model_url)\n",
-        "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
+        "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $model_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
         "\n",
         "install(model_url)\n",
         "\n",
