Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -286,9 +286,9 @@
       "source": [
         "#@title 追加学習モデル LoRA・Textual Inversion･Lycoris（任意）\n",
         "\n",
-        "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
+        "Lora_name =\"\" #@param [\"\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
-        "if Lora_name == \"None\":\n",
+        "if Lora_name == \"\":\n",
         "  url3  = None \n",
         "  path3 = None\n",
         "\n",
@@ -361,9 +361,9 @@
         "\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url3 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $path3\n",
         "\n",
-        "Textual_name =\"None\"#@param [\"None\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "Textual_name =\"\"#@param [\"\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
         "\n",
-        "if Textual_name == \"None\":\n",
+        "if Textual_name == \"\":\n",
         "  url4  = None \n",
         "  path4 = None\n",
         "\n",
@@ -433,7 +433,7 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url4 -d /content/stable-diffusion-webui/embeddings -o $path4\n",
         "\n",
         "#Lycoris-LoRA\n",
-        "Lycoris_name =\"None\"#@param [\"None\"] {allow-input:false}\n",
+        "Lycoris_name =\"\" #@param [\"\"] {allow-input:false}\n",
         "#準備中"
       ],
       "metadata": {
