Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -233,7 +233,7 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "  \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
-        "#@markdown ▼driveをマウントした場合、ファイルパスを入力してください。\n",
+        "#@markdown ▼driveからファイルをコピーする場合、ファイルパスを入力してください。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/output/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
