--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -234,25 +234,34 @@
         "  \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
         "#@markdown ▼driveからファイルをコピーする場合、ファイルパスを入力してください。\n",
-        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/output/iroha.safetensors\" #@param {type: \"string\"}\n",
+        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/oregairu-haruno-v2.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
-        "  if \"例:\" not in drivePath:\n",
-        "    if not os.path.exists(drivePath):\n",
-        "      drivePath = \"/content/drive/MyDrive/\" + drivePath\n",
-        "    if not os.path.exists(drivePath):\n",
-        "      print(\"drivePathが存在しません。コピーをスキップします。\")\n",
+        "    if \"例:\" not in drivePath:\n",
+        "        if not os.path.exists(drivePath):\n",
+        "            drivePath_with_prefix = \"/\" + drivePath\n",
+        "            if not os.path.exists(drivePath_with_prefix):\n",
+        "                drivePath_with_prefix = \"/content/drive/MyDrive/\" + drivePath\n",
+        "                if not os.path.exists(drivePath_with_prefix):\n",
+        "                    drivePath_with_prefix = \"/content/drive/MyDrive\" + drivePath\n",
+        "                    if not os.path.exists(drivePath_with_prefix):\n",
+        "                        print(f\"{drivePath} does not exist. Skipping copying step.\")\n",
+        "                    else:\n",
+        "                        drivePath = drivePath_with_prefix\n",
+        "                else:\n",
+        "                    drivePath = drivePath_with_prefix\n",
+        "            else:\n",
+        "                drivePath = drivePath_with_prefix\n",
+        "                \n",
+        "        from google.colab import drive\n",
+        "        if not os.path.exists(\"/content/drive\"):\n",
+        "            drive.mount(\"/content/drive\")\n",
+        "        !cp {drivePath} {pretrained_model}\n",
         "    else:\n",
-        "      from google.colab import drive\n",
-        "      if not os.path.exists(\"/content/drive\"):\n",
-        "        drive.mount(\"/content/drive\")\n",
-        "      !cp {drivePath} {pretrained_model}\n",
-        "      print(\"コピーされました\")\n",
-        "  else:\n",
-        "    print(\"drivePathのコピーをスキップします。\")\n",
+        "        print(\"Skipping copying step.\")\n",
         "else:\n",
-        "  print(\"drivePathが存在しません。コピーをスキップします。\")\n",
-        "\n",
+        "    print(\"drivePath is not provided. Skipping copying step.\")\n",
+        "  \n",
         "if modelUrl == \"\":\n",
         "  print(\"\")\n",
         "else:\n",
