Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -233,6 +233,28 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "  \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
+        " \n",
+        "if modelUrl == \"\":\n",
+        "  print(\"\")\n",
+        "else:\n",
+        "  def install(url):\n",
+        "      base_name = os.path.basename(url)\n",
+        "\n",
+        "      if url.startswith(\"https://drive.google.com\"):\n",
+        "          os.chdir(pretrained_model)\n",
+        "          !gdown --fuzzy {url}\n",
+        "      elif url.startswith(\"https://huggingface.co/\"):\n",
+        "          if \"/blob/\" in url:\n",
+        "              url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "                  #@markdown ▼Hugging Faceのプライベートモデルを使用する場合、[アクセストークン](https://huggingface.co/settings/tokens)を入力してください。\n",
+        "          huggingface_token = \"\"  # @param {type:\"string\"}\n",
+        "          user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "          !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "      else:\n",
+        "          !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "\n",
+        "  install(modelUrl)\n",
+        "\n",
         "#@markdown ▼driveからファイルをコピーする場合、ファイルパスを入力してください。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/oregairu-haruno-v2.safetensors\" #@param {type: \"string\"}\n",
         "\n",
@@ -261,27 +283,7 @@
         "        print(\"Skipping copying step.\")\n",
         "else:\n",
         "    print(\"drivePath is not provided. Skipping copying step.\")\n",
-        "  \n",
-        "if modelUrl == \"\":\n",
-        "  print(\"\")\n",
-        "else:\n",
-        "  def install(url):\n",
-        "      base_name = os.path.basename(url)\n",
-        "\n",
-        "      if url.startswith(\"https://drive.google.com\"):\n",
-        "          os.chdir(pretrained_model)\n",
-        "          !gdown --fuzzy {url}\n",
-        "      elif url.startswith(\"https://huggingface.co/\"):\n",
-        "          if \"/blob/\" in url:\n",
-        "              url = url.replace(\"/blob/\", \"/resolve/\")\n",
-        "                  #@markdown ▼Hugging Faceのプライベートモデルを使用する場合、[アクセストークン](https://huggingface.co/settings/tokens)を入力してください。\n",
-        "          huggingface_token = \"\"  # @param {type:\"string\"}\n",
-        "          user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "          !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
-        "      else:\n",
-        "          !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
-        "\n",
-        "  install(modelUrl)\n"
+        " "
       ],
       "metadata": {
         "cellView": "form",
