Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -259,31 +259,31 @@
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/oregairu-haruno-v2.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
-        "    if \"例:\" not in drivePath:\n",
-        "        if not os.path.exists(drivePath):\n",
-        "            drivePath_with_prefix = \"/\" + drivePath\n",
-        "            if not os.path.exists(drivePath_with_prefix):\n",
-        "                drivePath_with_prefix = \"/content/drive/MyDrive/\" + drivePath\n",
-        "                if not os.path.exists(drivePath_with_prefix):\n",
-        "                    drivePath_with_prefix = \"/content/drive/MyDrive\" + drivePath\n",
-        "                    if not os.path.exists(drivePath_with_prefix):\n",
-        "                        print(f\"{drivePath} does not exist. Skipping copying step.\")\n",
-        "                    else:\n",
-        "                        drivePath = drivePath_with_prefix\n",
-        "                else:\n",
-        "                    drivePath = drivePath_with_prefix\n",
-        "            else:\n",
-        "                drivePath = drivePath_with_prefix\n",
-        "                \n",
-        "        from google.colab import drive\n",
-        "        if not os.path.exists(\"/content/drive\"):\n",
-        "            drive.mount(\"/content/drive\")\n",
-        "        !cp {drivePath} {pretrained_model}\n",
-        "    else:\n",
-        "        print(\"Skipping copying step.\")\n",
+        "  if \"例:\" in drivePath:\n",
+        "    print(\"\")\n",
+        "  else:\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "      drive.mount(\"/content/drive\")\n",
+        "    # check if file exists in drivePath\n",
+        "    if not os.path.exists(drivePath):\n",
+        "      # check if file exists with \"/\" prefix\n",
+        "      if not os.path.exists(\"/\" + drivePath):\n",
+        "        # check if file exists with \"/content/drive/MyDrive/\" prefix\n",
+        "        if not os.path.exists(\"/content/drive/MyDrive/\" + drivePath):\n",
+        "          # check if file exists with \"/content/drive/MyDrive/LoRA/\" prefix\n",
+        "          if not os.path.exists(\"/content/drive/MyDrive/LoRA/\" + drivePath):\n",
+        "            print(f\"{drivePath} does not exist. Skipping copying step.\")\n",
+        "          else:\n",
+        "            drivePath = \"/content/drive/MyDrive/LoRA/\" + drivePath\n",
+        "        else:\n",
+        "          drivePath = \"/content/drive/MyDrive/\" + drivePath\n",
+        "      else:\n",
+        "        drivePath = \"/\" + drivePath\n",
+        "    !cp {drivePath} {pretrained_model}\n",
+        "    print(\"コピーしました。\")\n",
         "else:\n",
-        "    print(\"drivePath is not provided. Skipping copying step.\")\n",
-        " "
+        "  print(\"\")\n"
       ],
       "metadata": {
         "cellView": "form",
