--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -190,7 +190,7 @@
       "cell_type": "code",
       "source": [
         "#@title 3.VAE\n",
-        "vae_name = \"vae-ft-mse-840000-ema-pruned\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"orangemix.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -256,7 +256,7 @@
         "  install(modelUrl)\n",
         "\n",
         "#@markdown ▼driveからファイルをコピーする場合、ファイルパスを入力してください。\n",
-        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/oregairu-haruno-v2.safetensors\" #@param {type: \"string\"}\n",
+        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
         "  if \"例:\" in drivePath:\n",
