Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -322,7 +322,8 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデル(任意)\n",
-        "model_type =\"Checkpoint\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
+        "\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
@@ -333,23 +334,57 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "  \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
-        "def install(url):\n",
-        "    base_name = os.path.basename(url)\n",
+        " \n",
+        "if modelUrl == \"\":\n",
+        "  print(\"\")\n",
+        "else:\n",
+        "  def install(url):\n",
+        "      base_name = os.path.basename(url)\n",
         "\n",
-        "    if url.startswith(\"https://drive.google.com\"):\n",
-        "        os.chdir(pretrained_model)\n",
-        "        !gdown --fuzzy {url}\n",
-        "    elif url.startswith(\"https://huggingface.co/\"):\n",
-        "        if \"/blob/\" in url:\n",
-        "            url = url.replace(\"/blob/\", \"/resolve/\")\n",
-        "                #@markdown ▼プライベートモデルを使用する場合、huggingfaceのアクセストークンを入力してください。\n",
-        "        huggingface_token = \"\"  # @param {type:\"string\"}\n",
-        "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
-        "    else:\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "      if url.startswith(\"https://drive.google.com\"):\n",
+        "          os.chdir(pretrained_model)\n",
+        "          !gdown --fuzzy {url}\n",
+        "      elif url.startswith(\"https://huggingface.co/\"):\n",
+        "          if \"/blob/\" in url:\n",
+        "              url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "                  #@markdown ▼Hugging Faceのプライベートモデルを使用する場合、[アクセストークン](https://huggingface.co/settings/tokens)を入力してください。\n",
+        "          huggingface_token = \"\"  # @param {type:\"string\"}\n",
+        "          user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "          !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "      else:\n",
+        "          !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
-        "install(modelUrl)"
+        "  install(modelUrl)\n",
+        "\n",
+        "#@markdown ▼driveからファイルをコピーする場合、ファイルパスを入力してください。\n",
+        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
+        "\n",
+        "if drivePath:\n",
+        "  if \"例:\" in drivePath:\n",
+        "    print(\"\")\n",
+        "  else:\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "      drive.mount(\"/content/drive\")\n",
+        "    # check if file exists in drivePath\n",
+        "    if not os.path.exists(drivePath):\n",
+        "      # check if file exists with \"/\" prefix\n",
+        "      if not os.path.exists(\"/\" + drivePath):\n",
+        "        # check if file exists with \"/content/drive/MyDrive/\" prefix\n",
+        "        if not os.path.exists(\"/content/drive/MyDrive/\" + drivePath):\n",
+        "          # check if file exists with \"/content/drive/MyDrive/LoRA/\" prefix\n",
+        "          if not os.path.exists(\"/content/drive/MyDrive/LoRA/\" + drivePath):\n",
+        "            print(f\"{drivePath} does not exist. Skipping copying step.\")\n",
+        "          else:\n",
+        "            drivePath = \"/content/drive/MyDrive/LoRA/\" + drivePath\n",
+        "        else:\n",
+        "          drivePath = \"/content/drive/MyDrive/\" + drivePath\n",
+        "      else:\n",
+        "        drivePath = \"/\" + drivePath\n",
+        "    !cp {drivePath} {pretrained_model}\n",
+        "    print(\"コピーしました。\")\n",
+        "else:\n",
+        "  print(\"\")\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -362,7 +397,7 @@
       "cell_type": "code",
       "source": [
         "#@title  追加学習モデル LoRA･Textual Inversion･Lycoris（任意）\n",
-        "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
+        "Lora_name =\"\" #@param [\"\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
         "if Lora_name == \"None\":\n",
         "  url3  = None \n",
@@ -438,7 +473,7 @@
         "!wget $url3 -O $path3\n",
         "\n",
         "#Textual Inversion\n",
-        "Textual_name =\"None\"#@param [\"None\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "Textual_name =\"\"#@param [\"\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
         "\n",
         "if Textual_name == \"None\":\n",
         "  url4  = None \n",
@@ -510,7 +545,7 @@
         "!wget $url4 -O $path4\n",
         "\n",
         "#Lycoris\n",
-        "Lycoris_name =\"None\"#@param [\"None\"] {allow-input:false}\n",
+        "Lycoris_name =\"\"#@param [\"\"] {allow-input:false}\n",
         "#準備中"
       ],
       "metadata": {
