Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -44,14 +44,16 @@
         "\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
-        "#Extensions1\n",
+        "#Extensions1 絶対入れておくべき\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
+        "\n",
+        "#Extensions1.5 起動に必要？\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "\n",
-        "#Extensions2\n",
+        "#Extensions2　任意\n",
         "Extensions = True #@param {'type':'boolean'}\n",
         "if Extensions == True :\n",
         "  !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui\n",
@@ -70,7 +72,7 @@
         "%cd /content/stable-diffusion-webui\n",
         "!git reset --hard\n",
         "\n",
-        "#Extensions3(ControlNet)\n",
+        "#Extensions3(ControlNet)　任意\n",
         "ControlNet = True #@param {'type':'boolean'}\n",
         "if ControlNet == True :\n",
         "  !git clone https://github.com/camenduru/openpose-editor /content/stable-diffusion-webui/extensions/openpose-editor\n",
@@ -103,6 +105,7 @@
         "#EasyNegative\n",
         "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
         "\n",
+        "#ドライブをマウント\n",
         "mount_drive = False # @param {type: \"boolean\"}\n",
         "\n",
         "if mount_drive:\n",
