--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -300,155 +300,69 @@
       "source": [
         "#@title 追加学習モデル LoRA・Textual Inversion･Lycoris（任意）\n",
         "\n",
+        "\n",
         "Lora_name =\"\" #@param [\"\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
-        "if Lora_name == \"\":\n",
-        "  url3  = None \n",
-        "  path3 = None\n",
-        "\n",
-        "elif Lora_name == \"Anime_Screencap_Style_LoRA\":\n",
-        "  url3  = \"https://civitai.com/api/download/models/5742\" \n",
-        "  path3 = \"Anime_Screencap_Style_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"One_Piece_Wano_Style_LoRA\":\n",
-        "  url3  = \"https://civitai.com/api/download/models/6331\" \n",
-        "  path3 = \"One_Piece_Wano_Style_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Eula_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Eula/eulaMedium.safetensors\" \n",
-        "  path3 = \"Eula_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Yelan_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Yelan/Yelan_Hard.safetensors\" \n",
-        "  path3 = \"Yelan_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Barbara_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Barbara/Barbara_mediumpruned.safetensors\" \n",
-        "  path3 = \"Barbara_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Diluc_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Diluc/Diluc_Mediumpruned.safetensors\" \n",
-        "  path3 = \"Diluc_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Mona_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Mona/Mona_mediumpruned.safetensors\" \n",
-        "  path3 = \"Mona_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Ganyu_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Ganyu/Ganyu_Medium.safetensors\" \n",
-        "  path3 = \"Ganyu_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Jean_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Jean/Jean_Medium.safetensors\" \n",
-        "  path3 = \"Jean_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Kujou_Sara_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Kujou%20Sara/kujou%20sara_Heavy.safetensors\" \n",
-        "  path3 = \"kujou_sara_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Lisa_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Lisa/Lisa_Medium.safetensors\" \n",
-        "  path3 = \"/content/stable-diffusion-webui/models/Lora/Lisa_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Raiden_Shogun_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Raiden%20Shogun/raiden%20shogun_LoRA.safetensors\"\n",
-        "  path3 = \"/content/stable-diffusion-webui/models/Lora/Raiden_Shogun_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Shenhe_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Shenhe/Shenhe_Medium.safetensors\"\n",
-        "  path3 = \"/content/stable-diffusion-webui/models/Lora/Shenhe_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Yoimiya_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Yoimiya/Yoimiya_mediumpruned.safetensors\"\n",
-        "  path3 = \"/content/stable-diffusion-webui/models/Lora/Yoimiya_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Zhongli_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Zhongli/Zhongli_Medium.safetensors\"\n",
-        "  path3 = \"/content/stable-diffusion-webui/models/Lora/Zhongli_LoRA.safetensors\"\n",
-        "\n",
-        "elif Lora_name == \"Yae_Miko_LoRA\":\n",
-        "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/yae%20miko/yae%20miko_Mediumpruned.safetensors\"\n",
-        "  path3 = \"/content/stable-diffusion-webui/models/Lora/Yae_Miko_LoRA.safetensors\"\n",
-        "\n",
-        "else:\n",
-        "  print(\"Invalid Lora name.\")\n",
-        "\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url3 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $path3\n",
+        "Lora_dict={\n",
+        "\t\"Anime_Screencap_Style_LoRA\":\"https://civitai.com/api/download/models/5742\" ,\n",
+        "\t\"One_Piece_Wano_Style_LoRA\":\"https://civitai.com/api/download/models/6331\" ,\n",
+        "\t\"Eula_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Eula/eulaMedium.safetensors\" ,\n",
+        "\t\"Yelan_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Yelan/Yelan_Hard.safetensors\" ,\n",
+        "\t\"Barbara_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Barbara/Barbara_mediumpruned.safetensors\", \n",
+        "\t\"Diluc_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Diluc/Diluc_Mediumpruned.safetensors\" ,\n",
+        "\t\"Mona_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Mona/Mona_mediumpruned.safetensors\" ,\n",
+        "\t\"Ganyu_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Ganyu/Ganyu_Medium.safetensors\" ,\n",
+        "\t\"Jean_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Jean/Jean_Medium.safetensors\" ,\n",
+        "\t\"Kujou_Sara_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Kujou%20Sara/kujou%20sara_Heavy.safetensors\",\n",
+        "\t\"Lisa_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Lisa/Lisa_Medium.safetensors\",\n",
+        "\t\"Raiden_Shogun_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Raiden%20Shogun/raiden%20shogun_LoRA.safetensors\",\n",
+        "\t\"Shenhe_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Shenhe/Shenhe_Medium.safetensors\",\n",
+        "\t\"Yoimiya_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Yoimiya/Yoimiya_mediumpruned.safetensors\",\n",
+        "\t\"Zhongli_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Zhongli/Zhongli_Medium.safetensors\",\n",
+        "\t\"Yae_Miko_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/yae%20miko/yae%20miko_Mediumpruned.safetensors\",\n",
+        "}\n",
         "\n",
         "Textual_name =\"\"#@param [\"\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
         "\n",
-        "if Textual_name == \"\":\n",
-        "  url4  = None \n",
-        "  path4 = None\n",
-        "\n",
-        "if Textual_name == \"Corneo's Makima\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6197\"\n",
-        "  path4 = \"Corneo_Makima.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo_Power\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6027\" \n",
-        "  path4 = \"Corneo_Power.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Yor Forger\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6300\" \n",
-        "  path4 = \"Corneo_POV.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's POV Bound Wrists Missionary\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/5405\" \n",
-        "  path4 = \"Corneo_POV.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's Spitroast Threesome\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6770\" \n",
-        "  path4 = \"Corneo_Spitroast_Threesome.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's Anal sex\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/4597\" \n",
-        "  path4 = \"Corneo_Anal.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's Side-view Deepthroat\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6242\" \n",
-        "  path4 = \"Corneo_Side-view_Deepthroat.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's Covering Breasts -Two Hands\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6033\" \n",
-        "  path4 = \"Corneo_Covering_Breasts.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's X-shaped Nipple Pasties\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6318\" \n",
-        "  path4 = \"Corneo_Nipple_Pasties.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's POV Oral\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/5051\" \n",
-        "  path4 = \"Corneo_POV_Oral.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's POV Paizuri\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/5066\" \n",
-        "  path4 = \"Corneo_POV_Paizuri.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's Covering Breasts -One Arm\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/6034\" \n",
-        "  path4 = \"Corneo_Covering_Breasts-One.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's Arm Grab Doggystyle\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/5160\" \n",
-        "  path4 = \"Corneo_Arm_Grab_Doggystyle.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Corneo's Covering Breasts -Arms Crossed\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/5746\" \n",
-        "  path4 = \"Corneo_Covering_Breasts-Arms_Crossed.pt\"\n",
-        "\n",
-        "elif Textual_name == \"Licking Oral\":\n",
-        "  url4  = \"https://civitai.com/api/download/models/5746\" \n",
-        "  path4 = \"Licking_Oral.pt\"\n",
-        "\n",
-        "else:\n",
-        "  print(\"Invalid model name.\")\n",
-        "\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url4 -d /content/stable-diffusion-webui/embeddings -o $path4\n",
+        "Textual_dict={\n",
+        "\t\"Corneo's Makima\":\"https://civitai.com/api/download/models/6197\",\n",
+        "\t\"Corneo_Power\":\"https://civitai.com/api/download/models/6027\" ,\n",
+        "\t\"Yor Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
+        "\t\"Corneo's POV Bound Wrists Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
+        "\t\"Corneo's Spitroast Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
+        "\t\"Corneo's Anal sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
+        "\t\"Corneo's Side-view Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
+        "\t\"Corneo's Covering Breasts -Two Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
+        "\t\"Corneo's X-shaped Nipple Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
+        "\t\"Corneo's POV Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
+        "\t\"Corneo's POV Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
+        "\t\"Corneo's Covering Breasts -One Arm\":\"https://civitai.com/api/download/models/6034\", \n",
+        "\t\"Corneo's Arm Grab Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
+        "\t\"Corneo's Covering Breasts -Arms Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
+        "\t\"Licking Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
+        "}\n",
         "\n",
         "#Lycoris-LoRA\n",
         "Lycoris_name =\"\" #@param [\"\"] {allow-input:false}\n",
-        "#準備中"
+        "#準備中\n",
+        "Lycoris_dict={\"\"}\n",
+        "\n",
+        "Lora_url = Lora_dict.get(Lora_name)\n",
+        "Textual_url = Textual_dict.get(Textual_name)\n",
+        "Lycoris_url = Lycoris_dict.get(Lycoris_name)\n",
+        "\n",
+        "def install(Lora_url, Textual_url,Lycoris_url):\n",
+        "    if Lora_url is not None:\n",
+        "        base_name = os.path.basename(Lora_url)\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $model_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name     \n",
+        "    if Textual_url is not None:\n",
+        "        base_name = os.path.basename(Textual_url)\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
+        "    if Lycoris_url is not None:\n",
+        "        base_name = os.path.basename(Lycoris_url)\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
+        "\n",
+        "install(Lora_url, Textual_url,Lycoris_url)"
       ],
       "metadata": {
         "id": "QDG0oyNU6R1L",
