--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -25,14 +25,15 @@
         "!pip install -q --pre triton\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
-        "#超便利なExtensions\n",
+        "#Extensions1 絶対入れておくべき\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
-        "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
-        "#WebUIの拡張機能(Extensions)\n",
+        "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
+        "#Extensions2　任意\n",
         "Extensions = True #@param {'type':'boolean'}\n",
         "if Extensions == True :\n",
+        "  !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui\n",
         "  !git clone https://github.com/toshiaki1729/stable-diffusion-webui-dataset-tag-editor.git /content/stable-diffusion-webui/extensions/dataset-tag-editor\n",
         "  !git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui /content/stable-diffusion-webui/extensions/sdweb-merge-block-weighted-gui\n",
         "  !git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
@@ -41,7 +42,12 @@
         "  !git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
         "  !git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities\n",
         "  !git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-locon\n",
-        "\n",
+        "  !git clone https://github.com/hnmr293/sd-webui-llul /content/stable-diffusion-webui/extensions/sd-webui-llul\n",
+        "  !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git /content/stable-diffusion-webui/extensions/Stable-Diffusion-Webui-Civitai-Helper\n",
+        "  !git clone https://github.com/hnmr293/sd-webui-cutoff /content/stable-diffusion-webui/extensions/sd-webui-cutoff\n",
+        "  !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
+        "%cd /content/stable-diffusion-webui\n",
+        "#Extensions3(ControlNet)　任意\n",
         "ControlNet = True #@param {'type':'boolean'}\n",
         "if ControlNet == True :\n",
         "  !git clone https://github.com/camenduru/openpose-editor /content/stable-diffusion-webui/extensions/openpose-editor\n",
@@ -58,7 +64,15 @@
         "\n",
         "%cd /content/stable-diffusion-webui\n",
         "#EasyNegative\n",
-        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt"
+        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
+        "\n",
+        "#ドライブをマウント\n",
+        "mount_drive = False # @param {type: \"boolean\"}\n",
+        "\n",
+        "if mount_drive:\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")"
       ]
     },
     {
