Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -345,7 +345,7 @@
         "#Lycoris-LoRA\n",
         "Lycoris_name =\"\" #@param [\"\"] {allow-input:false}\n",
         "#準備中\n",
-        "Lycoris_dict={\"\"}\n",
+        "Lycoris_dict={\"\",\"\"}\n",
         "\n",
         "Lora_url = Lora_dict.get(Lora_name)\n",
         "Textual_url = Textual_dict.get(Textual_name)\n",
