Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -284,7 +284,7 @@
         "\t\"Yae_Miko_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/yae%20miko/yae%20miko_Mediumpruned.safetensors\",\n",
         "}\n",
         "\n",
-        "Textual_name =\"Corneo_Power\"#@param [\"\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "Textual_name =\"\"#@param [\"\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
         "\n",
         "Textual_dict={\n",
         "\t\"Corneo's Makima\":\"https://civitai.com/api/download/models/6197\",\n",
