--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -187,16 +187,24 @@
       "source": [
         "#@title カスタムモデル(任意)\n",
         "\n",
-        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
+        "elif model_type == \"Hypernetwork\":\n",
+        "    !git https://github.com/antis0007/sd-webui-multiple-hypernetworks.git /content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\"\n",
+        "elif model_type ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "elif model_type == \"LoRA\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "  \n",
+        "elif model_type == \"Wildcards\":\n",
+        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
+        "    \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
         " \n",
         "if modelUrl == \"\":\n",
