Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -225,16 +225,24 @@
       "source": [
         "#@title カスタムモデル(任意)\n",
         "\n",
-        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
+        "elif model_type == \"Hypernetwork\":\n",
+        "    !git https://github.com/antis0007/sd-webui-multiple-hypernetworks.git /content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\"\n",
+        "elif model_type ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "elif model_type == \"LoRA\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "  \n",
+        "elif model_type == \"Wildcards\":\n",
+        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
+        "\n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
         " \n",
         "if modelUrl == \"\":\n",
@@ -352,13 +360,13 @@
         "Lycoris_url = Lycoris_dict.get(Lycoris_name)\n",
         "\n",
         "def install(Lora_url, Textual_url,Lycoris_url):\n",
-        "    if Lora_url is not None:\n",
+        "    if Lora_url :\n",
         "        base_name = os.path.basename(Lora_url)\n",
         "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $model_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name     \n",
-        "    if Textual_url is not None:\n",
+        "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
         "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
-        "    if Lycoris_url is not None:\n",
+        "    if Lycoris_url :\n",
         "        base_name = os.path.basename(Lycoris_url)\n",
         "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
         "\n",
