Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -144,7 +144,18 @@
         "\n",
         "def install(model_url):\n",
         "    base_name = os.path.basename(model_url)\n",
-        "    !wget $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "\n",
+        "    if model_url.startswith(\"https://drive.google.com\"):\n",
+        "        os.chdir(pretrained_model)\n",
+        "        !gdown --fuzzy {model_url}\n",
+        "    elif model_url.startswith(\"https://huggingface.co/\"):\n",
+        "        if \"/blob/\" in model_url:\n",
+        "            model_url = model_url.replace(\"/blob/\", \"/resolve/\")\n",
+        "        huggingface_token = \"\" \n",
+        "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "        !wget --no-check-certificate $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "    else: \n",
+        "        !wget $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
         "    \n",
         "install(model_url)\n"
       ]
@@ -170,8 +181,17 @@
         "vae_url = url_dict.get(vae_name)\n",
         "\n",
         "def install(vae_url):\n",
-        "    base_name = os.path.basename(vae_url)\n",
-        "    !wget $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "    if vae_url.startswith(\"https://drive.google.com\"):\n",
+        "        os.chdir(pretrained_model)\n",
+        "        !gdown --fuzzy {vae_url}\n",
+        "    elif vae_url.startswith(\"https://huggingface.co/\"):\n",
+        "        if \"/blob/\" in vae_url:\n",
+        "            vae_url = vae_url.replace(\"/blob/\", \"/resolve/\")\n",
+        "        huggingface_token = \"\" \n",
+        "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "        !wget --no-check-certificate $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "    else: \n",
+        "        !wget $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
         "\n",
         "install(vae_url)"
       ],
